[package]
name = "rocket_lamb"
description = "A crate to allow running a Rocket webserver as an AWS Lambda Function with API Gateway"
repository = "https://github.com/GREsau/rocket-lamb"
version = "0.1.0"
authors = ["Graham Esau <graham.esau@vonage.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.0", default-features = false }
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
http = "0.1"
failure = "0.1.5"
