[package]
name = "rocket_lamb"
description = "A crate to allow running a Rocket webserver as an AWS Lambda Function with API Gateway"
repository = "https://github.com/GREsau/rocket-lamb"
version = "0.3.0"
authors = ["Graham Esau <graham.esau@vonage.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["rocket", "web", "lambda"]
categories = ["web-programming::http-server"]

[badges]
travis-ci = { repository = "GREsau/rocket-lamb" }

[dependencies]
rocket = { version = "0.4.0", default-features = false }
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
http = "0.1"
failure = "0.1.5"
